modified:   index.html

--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
 
   <p>This is my story</p>
 
+  <header>Some characteristics that make me unique</header>
+
+  <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+
 </body>
 </html>
