--- a/index.html
+++ b/index.html
@@ -5,22 +5,72 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About AJ</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/9893b2f6ff.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   
-  <h1>Hello my name is AJ Vancattenburch</h1>
 
-  <p>This is my story</p>
+  <div class="row container-fluid d-flex space-around space-between text-center">
+    <div class="col-4"></div>
+    <div class="col-4"></div>
+    <div class="col-4"></div>
+  </div>
+  <div class="row container-fluid d-flex space-around space-between text-center">
+    <div class="col-4"></div>
+    <div class="col-4"></div>
+    <div class="col-4"></div>
+  </div>
+  <div class="row container-fluid d-flex space-around space-between text-center">
+    <div class="col-4"></div>
+    <div class="col-4"></div>
+    <div class="col-4"></div>
+  </div>
+  <div class="row container-fluid d-flex space-around space-between text-center">
+    <div class="col-4"></div>
+    <div class="col-4"></div>
+    <div class="col-4"></div>
+  </div>
+  <div class="row container-fluid d-flex space-around space-between text-center">
+    <div class="col-4"></div>
+    <div class="col-4">    
+      <button id="btn" type="submit" class="btn-prompt">
+      push
+      </button>
+    </div>
+    <div class="col-4"></div>
+  </div>
+  <div class="row container-fluid text-center">
+    <div class="col-4"></div>
+    <div class="col-4">
+      <h1 id="hello" class="intro hidden">Hello.</h1>
+    </div>
+    <div class="col-4"></div>
+  </div>
+  <div class="row container-fluid text-center">
+    <div class="col-4"></div>
+    <div class="col-4">
+      <h2 id="hello-two" class="greet hidden">My name is Anthony Vancattenburch</h2>
+    </div>
+    <div class="col-4"></div>
+  </div>
+  <div class="row container-fluid d-flex space-around space-between text-center">
+    <div class="col-4"></div>
+    <div class="col-4"></div>
+    <div class="col-4"></div>
+  </div>
+  <div class="row container-fluid d-flex space-around space-between text-center">
+    <div class="col-4"></div>
+    <div class="col-4"></div>
+    <div class="col-4"></div>
+  </div>
 
-  <header>Some characteristics that make me unique</header>
 
-  <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-  </ul>
+
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <script src="app.js"></script>
 
 </body>
 </html>
