--- a/index.html
+++ b/index.html
@@ -1,76 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About AJ</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/9893b2f6ff.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  
 
-  <div class="row container-fluid d-flex space-around space-between text-center">
-    <div class="col-4"></div>
-    <div class="col-4"></div>
-    <div class="col-4"></div>
-  </div>
-  <div class="row container-fluid d-flex space-around space-between text-center">
-    <div class="col-4"></div>
-    <div class="col-4"></div>
-    <div class="col-4"></div>
-  </div>
-  <div class="row container-fluid d-flex space-around space-between text-center">
-    <div class="col-4"></div>
-    <div class="col-4"></div>
-    <div class="col-4"></div>
-  </div>
-  <div class="row container-fluid d-flex space-around space-between text-center">
-    <div class="col-4"></div>
-    <div class="col-4"></div>
-    <div class="col-4"></div>
-  </div>
-  <div class="row container-fluid d-flex space-around space-between text-center">
-    <div class="col-4"></div>
-    <div class="col-4">    
-      <button id="btn" type="submit" class="btn-prompt">
-      push
-      </button>
+
+
+  <header>
+    <div class="row">
+      <div class="col-3"></div>
+      <div class="col-3"></div>
+      <div class="col-3"></div>
+      <div class="col-3"></div>
     </div>
-    <div class="col-4"></div>
-  </div>
-  <div class="row container-fluid text-center">
-    <div class="col-4"></div>
-    <div class="col-4">
-      <h1 id="hello" class="intro hidden">Hello.</h1>
+  </header>
+
+  <main class="bg-main">
+    <section class="bg-me">
+      <div class="row">
+        <div class="col">
+          <h1 id="hello-one">Hello.</h1>
+        </div>
+      </div>
+
+      <div class="row text-end">
+        <div class="col">
+          <h2 id="hello-two" class="">
+            My name is AJ.
+          </h2>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-header">About Me</div>
+        <div class="card-body">
+          <h4 class="card-title">
+            Software Developer
+          </h4>
+          <p class="card-text">
+            I want to make a notable difference in a beautiful world of novelty that is driven by technology.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <div class="row text-end">
+      <div class="col-6"></div>
+      <div class="col-6 card">
+
+      </div>
     </div>
-    <div class="col-4"></div>
-  </div>
-  <div class="row container-fluid text-center">
-    <div class="col-4"></div>
-    <div class="col-4">
-      <h2 id="hello-two" class="greet hidden">My name is Anthony Vancattenburch</h2>
+
+    <section>
+      <div class="row text-center">
+        <div class="col pt-5 mt-5">
+          <section class="px-3 py-1">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner my-carousel px-5">
+                <div class="carousel-item active">
+                  <img src="my-family.jpg" class="d-block w-100" alt="Image">
+                  <h5 class="mt-2">Love</h5>
+                  <p class="img-describe">I love my family ❤️ I'm a born and raised family man.</p>
+                </div>
+                <div class="carousel-item">
+                  <img src="tractor-kid.jpg" class="d-block w-100" alt="Image">
+                  <h5 class="mt-2">Excavation Level: Expert</h5>
+                  <p class="img-describe">I love my kiddo! His name is Torus and he's our world!</p>
+                </div>
+                <div class="carousel-item">
+                  <img src="longboard.jpg" class="d-block w-100" alt="Image">
+                  <h5 class="mt-2">My Exercise</h5>
+                  <p class="img-describe">I love going longboarding with my pooch!</p>
+                </div>
+                <div class="carousel-item">
+                  <img src="outdoor-dog.jpg" class="d-block w-100" alt="Image">
+                  <h5 class="mt-2">Forest Family!</h5>
+                  <p class="img-4-describe">In this family we love the outdoors! ...oh and our dogs, too.</p>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </section>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="footer">
+
+
+    <div class="row ms-2">
+
+
+      <!--------- Social Media Icons --------->
+      <div class="col-2">
+        <a href="https://www.facebook.com/aj.vancattenburch/"><i class="fa fa-facebook img-fluid"></i></a>
+      </div>
+      <div class="col-2">
+        <a href="https://twitter.com/AVancattenburch"><i class="fa fa-twitter img-fluid"></i></a>
+      </div>
+      <div class="col-2">
+        <a href="https://github.com/AJVancattenburch"><i class="fa fa-github img-fluid"></i></a>
+      </div>
+      <div class="col-6">
+
+        <p class="legal text-end me-2">an About Me by AJ Vancattenburch</p>
+
+      </div>
     </div>
-    <div class="col-4"></div>
-  </div>
-  <div class="row container-fluid d-flex space-around space-between text-center">
-    <div class="col-4"></div>
-    <div class="col-4"></div>
-    <div class="col-4"></div>
-  </div>
-  <div class="row container-fluid d-flex space-around space-between text-center">
-    <div class="col-4"></div>
-    <div class="col-4"></div>
-    <div class="col-4"></div>
-  </div>
+    </div>
+
+    </div>
+    </div>
 
 
 
-  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
+    </div>
+
+  </footer>
+
+
+
+
+
+
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
   <script src="app.js"></script>
 
 </body>
+
 </html>
