--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       </div>
       <div class="col-6">
 
-        <p class="legal text-end me-2">an About Me by AJ Vancattenburch</p>
+        <p class="text-end me-2">an About Me by AJ Vancattenburch</p>
 
       </div>
     </div>
@@ -150,7 +150,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
     crossorigin="anonymous"></script>
-  <script src="app.js"></script>
 
 </body>
 
